--- a/src/app/modules/maker-portal/pages/user-management/user-management.component.html
+++ b/src/app/modules/maker-portal/pages/user-management/user-management.component.html
@@ -19,13 +19,13 @@
 
     <mat-card-content class="form-content">
         <mat-form-field class="acc-name" appearance="outline">
-            <mat-label>Enter Account Name</mat-label>
-            <input matInput type="text" placeholder="Account Number" />
+            <mat-label> Account Name </mat-label>
+            <input matInput type="text" placeholder="Account Name" />
             <mat-icon matSuffix>mode_edit</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="acc-input" appearance="outline">
-            <mat-label>Account Number </mat-label>
+            <mat-label> Account Number </mat-label>
             <input matInput type="text" placeholder="Account Number" />
             <mat-icon matSuffix>mode_edit</mat-icon>
         </mat-form-field>
