--- a/src/app/modules/maker-portal/pages/approved-request/approved-request.component.html
+++ b/src/app/modules/maker-portal/pages/approved-request/approved-request.component.html
@@ -1,4 +1,4 @@
-<h3 class="head-text">Approved Request</h3>
+<h3 class="head-text">Pending Request</h3>
 
 
 <div class="features-row">
@@ -10,8 +10,8 @@
                 <span>Filter</span>
                 <mat-icon>expand_more</mat-icon>
             </div>
-        </button>        
-        
+        </button>
+
         <mat-menu #filterMenu="matMenu">
             <h3>FILTER OPTIONS</h3>
             <button mat-menu-item>
@@ -105,7 +105,7 @@
 
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status</th>
-                <td mat-cell *matCellDef="let element" class="mat-column-status"> <span class="status-pending"
+                <td mat-cell *matCellDef="let element" class="mat-column-status"> <span class="status-approved"
                         [ngClass]="{'status-approved': element.status.toLowerCase() === 'approved'}">{{ element.status }}
                     </span>
                 </td>
@@ -126,9 +126,10 @@
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row;  odd as isOdd; columns: displayedColumns;" [class.odd-row]="isOdd"
-                (click)="selection.toggle(row)" class="hoverable-row"
+                (click)="navigateToDetails(row)" class="hoverable-row"
                 [ngClass]="{'selected': selection.isSelected(row)}">
             </tr>
+
         </table>
     </div>
 
