--- a/src/app/modules/authentication/authentication.component.scss
+++ b/src/app/modules/authentication/authentication.component.scss
@@ -1,3 +1,8 @@
+:host{
+  width: 100%;
+  height: 100%;
+}
+
 .main-login-container{
   display: flex;
   width: 100%;
@@ -11,7 +16,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 
   position: relative;
 
@@ -27,7 +31,7 @@
 .login-background{
   // background-image: url("/assets/svgs/login_backdrop.svg");
 
-  background-color: rgb(62, 62, 224);
+  background-color: orange;
 
   width: 50%;
   height: 100%;
@@ -106,20 +110,53 @@ margin-top: 20px;
   text-align: right;
 }
 
+button.sso{
+border-radius: 12px;
+  font-family: 'Avenir Next';
+  font-size: 1rem;
+  padding: .5rem 3rem;
+  box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
+  border: solid 2px transparent;
+  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, #F1511B, #80CC28,#00ADEF,#FBBC09);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  box-shadow: 2px 1000px 1px #fff inset;
+}
 
-// .login-btn:active{
-//   // background-color: red;
-//     background: linear-gradient(93.67deg, #FFB81D 1.23%, #FF681D 58.64%);
+button.sso section{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  letter-spacing: 1.1px;
+  text-transform: capitalize;
+}
 
-// }
+button.sso section img{
+  margin-right: 15px;
+}
+button.sso:active{
+  background-color: transparent;
+    background: transparent;
+    box-shadow: none;
 
-// .login-btn:hover{
-//   background-color: red;
-// }
+}
 
-// .login-btn:focus{
-//   background-color: pink;
-// }
+button.sso:active{
+  background-color: transparent;
+  background: transparent;
+  box-shadow: none;
+
+}
+
+button.sso:active{
+  background-color: transparent;
+  background: transparent;
+  box-shadow: none;
+
+}
 
 // .login-btn:disabled{
 //   background-color: blue;
