--- a/src/app/modules/approval-portal/components/form-approval/form-approval.component.html
+++ b/src/app/modules/approval-portal/components/form-approval/form-approval.component.html
@@ -58,9 +58,9 @@
             <mat-divider></mat-divider>
 
             <mat-card-actions class="form1-but">
-                <button mat-raised-button color="primary" (click)="approve()">Approved</button>
-<button mat-raised-button color="warn" (click)="openRejectDialog()">Rejected</button>
-
+                <button class="form1-button blue-button" (click)="doneButton()" mat-raised-button color="primary" mat-button>
+                    Done
+                </button>
             </mat-card-actions>
         </mat-card-content>
     </form>
