--- a/src/app/modules/approval-portal/components/form-approval/form-approval.component.scss
+++ b/src/app/modules/approval-portal/components/form-approval/form-approval.component.scss
@@ -79,14 +79,11 @@
 }
 
 
-.mat-primary {
-    background-color: green;
-  }
-  
-  .mat-warn {
-    background-color: red;
-  }
-  
+.blue-button {
+    background-color: #007BFF !important;
+    color: #ffffff !important;
+    margin-left: 495px;
+}
 
 
 mat-form-field {
