--- a/src/app/modules/approval-portal/pages/rejected-requests/rejected-requests.component.html
+++ b/src/app/modules/approval-portal/pages/rejected-requests/rejected-requests.component.html
@@ -126,9 +126,9 @@
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row;  odd as isOdd; columns: displayedColumns;" [class.odd-row]="isOdd"
-                (click)="selection.toggle(row)" class="hoverable-row"
-                [ngClass]="{'selected': selection.isSelected(row)}">
-            </tr>
+            (click)="navigateToDetails(row)" class="hoverable-row"
+            [ngClass]="{'selected': selection.isSelected(row)}">
+        </tr>
         </table>
     </div>
 
