--- a/src/app/modules/approval-portal/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/approval-portal/pages/dashboard/dashboard.component.html
@@ -32,8 +32,8 @@
                 <span>Filter</span>
                 <mat-icon>expand_more</mat-icon>
             </div>
-        </button>        
-        
+        </button>
+
         <mat-menu #filterMenu="matMenu">
             <h3>FILTER OPTIONS</h3>
             <button mat-menu-item>
@@ -51,7 +51,7 @@
             <button mat-menu-item>
                 <mat-checkbox></mat-checkbox> Date of Offense
             </button>
-        </mat-menu>        
+        </mat-menu>
 
         <button mat-button [matMenuTriggerFor]="exportMenu" mat-raised-button class="export-btn">
             <div class="flex-container">
@@ -60,26 +60,26 @@
                 <mat-icon>expand_more</mat-icon>
             </div>
 
-            
+
         </button>
         <mat-menu #exportMenu="matMenu">
             <h3>EXPORT TO</h3>
             <button mat-menu-item>
-              PDF
+                PDF
             </button>
             <button mat-menu-item>
                 CSV
             </button>
-           
-        </mat-menu>        
-        
+
+        </mat-menu>
+
     </div>
 
     <!-- Search Bar -->
     <div class="custom-search-bar">
         <input type="text" placeholder="Search here">
     </div>
-    
+
 </div>
 
 <div class="content-page">
@@ -128,7 +128,8 @@
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status</th>
                 <td mat-cell *matCellDef="let element" class="mat-column-status"> <span class="status-pending"
-                        [ngClass]="{'status-pending': element.status.toLowerCase() === 'pending','status-approved': element.status.toLowerCase() === 'approved','status-reject': element.status.toLowerCase() === 'rejected'}">{{ element.status }}
+                        [ngClass]="{'status-pending': element.status.toLowerCase() === 'pending','status-approved': element.status.toLowerCase() === 'approved','status-reject': element.status.toLowerCase() === 'rejected'}">{{
+                        element.status }}
                     </span>
                 </td>
             </ng-container>
