fixes for maker and approval portal

--- a/src/app/modules/approval-portal/components/rejectreasondialogue/rejectreasondialogue.component.html
+++ b/src/app/modules/approval-portal/components/rejectreasondialogue/rejectreasondialogue.component.html
@@ -1,6 +1,7 @@
+<div class="dialogue-wrapper">
 <h2 mat-dialog-title>Reject Request</h2>
 <mat-dialog-content>
-  <mat-form-field class="first" appearance="fill" appearance="outline">
+  <mat-form-field class="first" appearance="outline">
     <mat-label>Select a Reason</mat-label>
     <mat-select>
       <mat-option value="reason1">Policy not clearly violated</mat-option>
@@ -8,13 +9,15 @@
       <mat-option value="reason3">Reasonable explanation given</mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-form-field appearance="fill" appearance="outline" class="full-width">
+  <mat-form-field class="full-width" appearance="outline">
     <mat-label>Additional Comments</mat-label>
     <textarea matInput></textarea>
   </mat-form-field>
 </mat-dialog-content>
 <mat-divider></mat-divider>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true">Confirm</button>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close class="cancel-button">Cancel</button>
+  <button mat-button [mat-dialog-close]="true" class="accept-button">Confirm</button>
 </mat-dialog-actions>
+<div>
+
