--- a/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
+++ b/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
@@ -17,6 +17,12 @@
     </mat-card-header>
 
     <mat-card-content class="form-content">
+        <mat-form-field class="acc-input" appearance="outline">
+            <mat-label>Account Number </mat-label>
+            <input matInput type="text" placeholder="Account Number" disabled />
+            <mat-hint class="form-hint">This field is auto-populated</mat-hint>
+        </mat-form-field>
+       
         <mat-form-field class="acc-name" appearance="outline">
             <mat-label>Select Account Name</mat-label>
             <mat-select>
@@ -26,21 +32,14 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field class="acc-input" appearance="outline">
-            <mat-label>Account Number </mat-label>
-            <input matInput type="text" placeholder="Account Number" />
-            <mat-hint class="form-hint">This field is auto-populated</mat-hint>
-        </mat-form-field>
     </mat-card-content>
 
-    <mat-form-field class="role-of-employee" appearance="outline">
-        <mat-label> Role of Employee </mat-label>
-        <mat-select>
-            <mat-option *ngFor="let RoleOfEmployee of roleofemployee" [value]="RoleOfEmployee.value">
-                {{ RoleOfEmployee.label }}
-            </mat-option>
-        </mat-select>
+    <mat-form-field class="amount-field" appearance="outline">
+        <mat-label> Amount </mat-label>
+        <input matInput type="text" placeholder="Amount" disabled />
+        <mat-hint class="form-hint">This field is auto-populated</mat-hint>
     </mat-form-field>
+
 
     <mat-form-field class="type-of-offense" appearance="outline">
         <mat-label> Type of Offense </mat-label>
@@ -51,9 +50,9 @@
         </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="amount-field" appearance="outline">
-        <mat-label> Amount </mat-label>
-        <input matInput type="text" placeholder="Amount" />
+    <mat-form-field class="role-of-employee" appearance="outline">
+        <mat-label> Role of Employee </mat-label>
+        <input matInput type="text" placeholder="Role of Employee" disabled />
         <mat-hint class="form-hint">This field is auto-populated</mat-hint>
     </mat-form-field>
 
